blockml/test/valid/02_dim_refs_dim/v2/v2d.dashboard
dashboard: v2d
title: 'sales'
reports:
- title: 'weekly'
  model: v2m
  select:
  - mf.dim4
  type: 'table'

