blockml/test/errors/12_chart/e267/e267d.dashboard
dashboard: e267d
title: 'sales'
reports:
- title: 'overview'
  select:
  - a.dim1
  model: e267m
  type: 'gauge_linear'
  data:
    value_field: a.dim1
  options:
    interpolation: unk        


